--- a/fyp-backend/package.json
+++ b/fyp-backend/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-simple": "^0.5.6",
+    "mqtt": "^5.13.2",
     "mysql2": "^3.14.1",
     "python": "^0.0.4",
     "ws": "^8.18.3"
